--- a/mystyles/estilos.css
+++ b/mystyles/estilos.css
@@ -199,6 +199,7 @@ span {
     font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
     text-align: center;
     margin: 1.2vh;
+    margin-top: 50px;
 }
 
 .subtitulado-card {
@@ -226,7 +227,6 @@ span {
 }
 
 .macbookpro {
-    border: 1px solid rgb(255, 111, 0);
     background-image: url("../images/apple_images/promo_mbp13__buwssod6c8vm_medium.jpg");
     background-repeat: no-repeat;
     background-position: 40px;
@@ -243,7 +243,6 @@ span {
 }
 
 .watch {
-    border: 1px solid rgb(251, 0, 255);
     background-image: url("../images/apple_images/promo_watch_lte__djeaso7ukrsm_medium.jpg");
     background-repeat: no-repeat;
     background-color: #fbfbfd;
@@ -256,9 +255,20 @@ span {
 #watch1{
     justify-content: center;
     margin-left: 38%;
+    margin-top: 50px;
 }
 
-.sublinecard{
+.sublinecardblack{
+    font-size: 19px;
+    line-height: 1.21053;
+    font-weight: 400;
+    letter-spacing: .012em;
+    font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+    text-align: center;
+    color: white;
+}
+
+.sublinecardwhite {
     font-size: 19px;
     line-height: 1.21053;
     font-weight: 400;
@@ -268,19 +278,24 @@ span {
 }
 
 .iPadair {
-    border: 1px solid rgb(0, 255, 47);
-    background-image: url("../images/apple_images/hero_bts__bcuslanw39xe_largetall.jpeg");
+    background-image: url("../images/apple_images/promo_ipadair_avail__ferd4bfpcdm6_medium.jpg");
     background-repeat: no-repeat;
     background-color: #fbfbfd;
-    background-position: 40px;
+    background-size: 100%;
+    background-position: 50%;
     width: 48.3%;
     height: 600px;
     margin: 5px;
 
 }
 
+#ipadair1{
+    justify-content: center;
+    margin-left: 38%;
+    margin-top: 50px;
+}
+
 .apple-card {
-    border: 1px solid rgb(0, 255, 234);
     background-image: url("../images/apple_images/tile__cauwwcyyn9hy_medium.jpg");
     background-repeat: no-repeat;
     background-color: #fbfbfd;
@@ -293,15 +308,15 @@ span {
 #card1{
     justify-content: center;
     margin-left: 40%;
+    margin-top: 50px;
 }
 
 .airpods-pro {
-    border: 1px solid rgb(231, 168, 168);
     background-image: url("../images/apple_images/tile_airpods_cauwwcyyn9hy_large.jpg");
     background-repeat: no-repeat;
     background-color: #000000;
     background-position: 180px;
-    background-position-y: 190px;
+    background-position-y: 210px;
     color: white;
     width: 48.3%;
     height: 600px;
@@ -313,8 +328,37 @@ span {
     flex-direction: row;
     justify-content: center;
     font-size: 17px;
+    text-decoration: none;
 }
 
-footer {
-    border: 1px solid red;
+
+.carrusel {
+    display: flex;
+    width: 100%;
+    height: 80%;
+    overflow-x: scroll;
+}
+
+.carruselimg {
+    flex: 0 0 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.footercontent{
+    padding-left: 15%;
+    padding-right: 15%;
+    padding-top: 10px;
+    background-color: #f5f5f7;
+}
+#footertext{
+    font-size: 12px;
+    font-family: inherit;
+    font-weight: inherit;
+    line-height: inherit;
+    text-align: inherit;
+}
+a{
+    text-decoration: none;
+    color: #000000;
 }
