Porfi que sea el ultimo

--- a/mystyles/estilos.css
+++ b/mystyles/estilos.css
@@ -220,11 +220,8 @@ span {
     background-image: url("../images/apple_images/promo_iphone13pro_avail__beadms4ldidu_medium.jpg");
     background-repeat: no-repeat;
     background-color: #fbfbfd;
-<<<<<<< HEAD
     background-position: 60px;
-=======
     background-position: 40px;
->>>>>>> 8ba7246713aab57fdffd13769e5f999f672d9982
     width: 49%;
     height: 600px;
     margin: 5px;
@@ -241,14 +238,14 @@ span {
     margin: 5px;
 }
 
-<<<<<<< HEAD
+
 #macbookpro1{
     justify-content: center;
     margin-left: 33%;
-=======
+}
+
 h2{
     color:white;
->>>>>>> 8ba7246713aab57fdffd13769e5f999f672d9982
 }
 
 .watch {
@@ -289,13 +286,10 @@ h2{
 .iPadair {
     background-image: url("../images/apple_images/promo_ipadair_avail__ferd4bfpcdm6_medium.jpg");
     background-repeat: no-repeat;
-    background-color: #fbfbfd;
-<<<<<<< HEAD
+    background-color: #000000;
     background-size: 100%;
     background-position: 50%;
-=======
     background-position: 40px;
->>>>>>> 8ba7246713aab57fdffd13769e5f999f672d9982
     width: 48.3%;
     height: 600px;
     margin: 5px;
@@ -329,19 +323,14 @@ h2{
     background-repeat: no-repeat;
     background-color: #000000;
     background-position: 180px;
-<<<<<<< HEAD
     background-position-y: 210px;
-=======
     background-position-y: 190px;
->>>>>>> 8ba7246713aab57fdffd13769e5f999f672d9982
     color: white;
     width: 48.3%;
     height: 600px;
     margin: 5px;
 }
 
-<<<<<<< HEAD
-=======
 .subtitulado-card{
     margin-top: 5px;
         font-size: 24px;
@@ -356,12 +345,11 @@ h2{
         
 }
 
->>>>>>> 8ba7246713aab57fdffd13769e5f999f672d9982
+
 .information-buy-links-cards {
     display: flex;
     flex-direction: row;
     justify-content: center;
-<<<<<<< HEAD
     font-size: 17px;
     text-decoration: none;
 }
@@ -393,13 +381,7 @@ h2{
     line-height: inherit;
     text-align: inherit;
 }
-a{
+#footertext a{
     text-decoration: none;
     color: #000000;
-=======
-}
-
-footer {
-    border: 1px solid red;
->>>>>>> 8ba7246713aab57fdffd13769e5f999f672d9982
 }
